# heictojpeg

./: .gitignore  CLAUDE.md  Cargo.toml  justfile  main.go  main_test.go  readme.md
.github/workflows/: ci.yml  test.yml
src/: cli.rs  convert.rs  lib.rs  main.rs
testdata/images/: README.md
testdata/images/jpegs/: logs.txt
